# clifunction

./: .gitignore  Bake.py  CliFunction.py  DecoratorCLI.py  Example.py  LICENSE  Main.py  PyPI_Readme.md  README.md  __init__.py  developer.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: automated-tests.yml  code-quality.yml  deploy-pages.yml  everyCommit.yml  linting.yml  publish-package.yml  python-app.yml  tests.yml
_site/: 404.html  index.html  search.html
_site/search/: search_index.json
docs/: index.md
test/: test_abbreviations.py  test_canary.py  test_collect_method_kwargs.py  test_execute.py  test_function_help.py  test_generate_method_kwargs.py  test_invalidTargets.py
