[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clifunction"
version = "0.2.4"
authors = [
  { name="Isaak Malers", email="isaak.malers+clifunction@gmail.com" },
]
description = "Build a fully featured CLI for your python project with minium effort"
readme = "./docs/index.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Isaak-Malers/clifunction"
"Bug Tracker" = "https://github.com/Isaak-Malers/clifunction/issues"
"Documentation" = "https://isaak-malers.github.io/clifunction/"


[tool.hatch.build]
include = ["CliFunction.py"]
exclude = [
    "Example.py",
    "/docs",
    "/test",
    "/_site"
]